fixed lorem text and text-align

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -230,7 +230,7 @@ ion-icon {
 }
 
 .features {
-    text-align: justify;
+    text-align: center;
     padding: 1%;
 }
 
